--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>Toboolist</title>
 </head>
 <body>
-    
+  <header>
+      <div class="container">
+        <img src="img/Logo.png" alt="logo">
+        <h1 class="title">Toboolist</h1>
+      </div>
+  </header>  
+
 </body>
 </html>
