--- a/index.html
+++ b/index.html
@@ -14,6 +14,66 @@
         <h1 class="title">Toboolist</h1>
       </div>
   </header>  
+  <main class="corpo">
+      <div class="nav">
+            <button>Add Task</button>
+            <button>Add section</button>
+        </div>
+        <div class="centro">
+            <div>&#9660;
+                <h2 class="lista"> New task</h2>
+            </div>
+            <div>
+                <ul>
+                    <li>&#9989; Quarterly Newsletter
+                      <div class="categoria" id="editorial">Editorial</div>
+                  </li>
+                </ul>
+             </div>
+
+             <div>&#9660;
+              <h2 class="lista">Today</h2>
+            </div>
+             <div>
+                 <ul>
+                    <li>&#9989; Recruiting blog post
+                     <div class="categoria" id="editorial">Editorial</div>
+                     </li>
+                    <li>&#9989; Mobile app launch 
+                      <div class="categoria" id="goals">Q1 Goals</div>
+                    </li>
+                    <li>&#9989; Interview John H.  
+                      <div class="categoria" id="recruiting">Recruiting</div>
+                    </li>
+                      <li>&#9989; Summit update to mobile storefronts 
+                      <div class="categoria" id="mobile">Mobile</div>
+                     </li>
+                </ul>
+             </div>
+        
+            <div>&#9660;
+              <h2 class="lista"> Upcoming</h2>
+             </div>
+            <div>
+                <ul>
+                    <li>&#9989; Schedule update to mobile storefronts
+                      <div class="categoria" id="mobile">Mobile</div>
+                     </li>
+                     <li>&#9989; Homepage refresh
+                            <div class="categoria" id="website">Website</div>
+                       </li>
+                       <li>&#9989; Onboard new Sales team members
+                            <div class="categoria" id="sales">Mobile</div>
+                       </li>
+                       <li>&#9989; Review editorial calendar
+                            <div class="categoria" id="editorial">Editorial</div>
+                       </li>
+
+                </ul>
+            </div>
+
+        </div>
+  </main>
 
 </body>
 </html>
