--- a/index.html
+++ b/index.html
@@ -20,54 +20,54 @@
             <button>Add section</button>
         </div>
         <div class="centro">
-            <div>&#9660;
-                <h2 class="lista"> New task</h2>
-            </div>
-            <div>
-                <ul>
-                    <li>&#9989; Quarterly Newsletter
-                      <div class="categoria" id="editorial">Editorial</div>
+             <div>&#9660;
+                 <h2 class="lista"> New task</h2>
+         </div>
+         <div>
+             <ul>
+                  <li><span id="done">&#10003;</span> Quarterly Newsletter
+                       <div class="categoria" id="editorial">Editorial</div>
                   </li>
                 </ul>
              </div>
 
              <div>&#9660;
-              <h2 class="lista">Today</h2>
+                 <h2 class="lista">Today</h2>
             </div>
              <div>
                  <ul>
-                    <li>&#9989; Recruiting blog post
-                     <div class="categoria" id="editorial">Editorial</div>
+                    <li><span id="done">&#10003;</span> Recruiting blog post
+                         <div class="categoria" id="editorial">Editorial</div>
                      </li>
-                    <li>&#9989; Mobile app launch 
-                      <div class="categoria" id="goals">Q1 Goals</div>
+                    <li><span id="done">&#10003;</span> Mobile app launch 
+                         <div class="categoria" id="goals">Q1 Goals</div>
                     </li>
-                    <li>&#9989; Interview John H.  
-                      <div class="categoria" id="recruiting">Recruiting</div>
+                    <li><span id="not-done">&#9747;</span> Interview John H.  
+                        <div class="categoria" id="recruiting">Recruiting</div>
                     </li>
-                      <li>&#9989; Summit update to mobile storefronts 
-                      <div class="categoria" id="mobile">Mobile</div>
+                     <li><span id="done">&#10003;</span> Summit update to mobile storefronts 
+                        <div class="categoria" id="mobile">Mobile</div>
                      </li>
-                </ul>
+                 </ul>
              </div>
         
             <div>&#9660;
-              <h2 class="lista"> Upcoming</h2>
+                 <h2 class="lista"> Upcoming</h2>
              </div>
             <div>
                 <ul>
-                    <li>&#9989; Schedule update to mobile storefronts
-                      <div class="categoria" id="mobile">Mobile</div>
+                    <li><span id="not-done">&#9747;</span> Schedule update to mobile storefronts
+                         <div class="categoria" id="mobile">Mobile</div>
                      </li>
-                     <li>&#9989; Homepage refresh
-                            <div class="categoria" id="website">Website</div>
-                       </li>
-                       <li>&#9989; Onboard new Sales team members
-                            <div class="categoria" id="sales">Mobile</div>
-                       </li>
-                       <li>&#9989; Review editorial calendar
-                            <div class="categoria" id="editorial">Editorial</div>
-                       </li>
+                     <li><span id="done">&#10003;</span> Homepage refresh
+                       <div class="categoria" id="website">Website</div>
+                     </li>
+                    <li><span id="done">&#10003;</span> Onboard new Sales team members
+                         <div class="categoria" id="sales">Mobile</div>
+                    </li>
+                    <li><span id="done">&#10003;</span> Review editorial calendar
+                        <div class="categoria" id="editorial">Editorial</div>
+                    </li>
 
                 </ul>
             </div>
