--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </header>  
   <main class="corpo">
       <div class="nav">
-            <button>Add Task</button>
-            <button>Add section</button>
+            <button id="bt-blue">Add Task</button>
+            <button id="bt-grey">Add section</button>
         </div>
         <div class="centro">
              <div>&#9660;
