correzione id ripetuti

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
          </div>
          <div>
              <ul>
-                  <li><span id="done">&#10003;</span> Quarterly Newsletter
-                       <div class="categoria" id="editorial">Editorial</div>
+                  <li><span class="done">&#10003;</span> Quarterly Newsletter
+                       <div class="categoria editorial">Editorial</div>
                   </li>
                 </ul>
              </div>
@@ -36,17 +36,17 @@
             </div>
              <div>
                  <ul>
-                    <li><span id="done">&#10003;</span> Recruiting blog post
-                         <div class="categoria" id="editorial">Editorial</div>
+                    <li><span class="done">&#10003;</span> Recruiting blog post
+                         <div class="categoria editorial">Editorial</div>
                      </li>
-                    <li><span id="done">&#10003;</span> Mobile app launch 
-                         <div class="categoria" id="goals">Q1 Goals</div>
+                    <li><span class="done">&#10003;</span> Mobile app launch 
+                         <div class="categoria goals">Q1 Goals</div>
                     </li>
-                    <li><span id="not-done">&#9747;</span> Interview John H.  
-                        <div class="categoria" id="recruiting">Recruiting</div>
+                    <li><span class="not-done">&#9747;</span> Interview John H.  
+                        <div class="categoria recruiting">Recruiting</div>
                     </li>
-                     <li><span id="done">&#10003;</span> Summit update to mobile storefronts 
-                        <div class="categoria" id="mobile">Mobile</div>
+                     <li><span class="done">&#10003;</span> Summit update to mobile storefronts 
+                        <div class="categoria mobile">Mobile</div>
                      </li>
                  </ul>
              </div>
@@ -56,17 +56,17 @@
              </div>
             <div>
                 <ul>
-                    <li><span id="not-done">&#9747;</span> Schedule update to mobile storefronts
-                         <div class="categoria" id="mobile">Mobile</div>
+                    <li><span class="not-done">&#9747;</span> Schedule update to mobile storefronts
+                         <div class="categoria mobile">Mobile</div>
                      </li>
-                     <li><span id="done">&#10003;</span> Homepage refresh
-                       <div class="categoria" id="website">Website</div>
+                     <li><span class="done">&#10003;</span> Homepage refresh
+                       <div class="categoria website">Website</div>
                      </li>
-                    <li><span id="done">&#10003;</span> Onboard new Sales team members
-                         <div class="categoria" id="sales">Mobile</div>
+                    <li><span class="done">&#10003;</span> Onboard new Sales team members
+                         <div class="categoria sales">Mobile</div>
                     </li>
-                    <li><span id="done">&#10003;</span> Review editorial calendar
-                        <div class="categoria" id="editorial">Editorial</div>
+                    <li><span class="done">&#10003;</span> Review editorial calendar
+                        <div class="categoria editorial">Editorial</div>
                     </li>
 
                 </ul>
